# snekk

./: .clang-format  CMakeLists.txt  README.MD  README.md  snekk.c
src/: draw_playarea.c  fruit_spawn.c  input_handler.c  snekk.c
